@@ -137,6 +137,72 @@ bool JCalibrationFile::GetCalib(string namepath, map<string, string> &svals, int
 //---------------------------------
 // GetCalib
 //---------------------------------
+bool JCalibrationFile::GetCalib(string namepath, vector<string> &svals, int event_number)
+{
+	/// Open file specified by namepath (and the url passed to us in the
+	/// constructor) and read in the calibration constants in plain
+	/// ascii from it. Values are copied into <i>svals</i>.
+	///
+	/// File format can be one of two forms. Either one value per line
+	/// or one key/value pair per line. If only one value is found, 
+	/// the line number is used as the key. When both key and value
+	/// are present, they must be separated by white space.
+	/// Lines starting with # are considered comments and are ignored.
+	
+	// n.b. this was copied from the above and only the "push_back" line modified
+	// to ignore the key and store only the values in the order they are encountered
+	
+	// Clear svals map.
+	svals.clear();
+	
+	// Open file
+	string fname = basedir + namepath;
+	ifstream f(fname.c_str());
+	if(!f.is_open()){
+		string mess = "Unable to open \"" + fname + "\"!";
+		throw JException(mess);
+		return true; // never gets to this line
+	}
+	
+	// Loop over all lines in the file
+	int nvals = 0;
+	string line;
+	while(getline(f, line, '\n')){
+		if(line.length()==0)continue;
+		if(line[0] == '#')continue;
+		
+		// Try and break up the line into a key and a value.
+		stringstream ss(line);
+		string key, val;
+		ss>>key;
+		if(key==line){
+			// Must be just one item here. Copy it to val and set key to "nvals"
+			// colum names are set to position with zero padding so map maintains
+			// correct order (up to 9999)
+			val = key;
+			stringstream sss;
+			sss << setw(4) << setfill('0') << nvals; // This tricky bit is just to convert from an int to a string
+			sss>>key;
+		}else{
+			// Looks like there is a key and a value here.
+			ss>>val;
+		}
+		
+		// Add this key value pair to svals.
+		svals.push_back(val);
+		
+		nvals++;
+	}
+	
+	// Close file
+	f.close();
+
+	return false;
+}
+
+//---------------------------------
+// GetCalib
+//---------------------------------
 bool JCalibrationFile::GetCalib(string namepath, vector< map<string, string> > &svals, int event_number)
 {
 	/// Open file specified by namepath (and the url passed to us in the
@@ -194,6 +260,90 @@ bool JCalibrationFile::GetCalib(string namepath, vector< map<string, string> > &
 				colnames.push_back(sss.str());
 			}
 			mval[colnames[icol++]] = val;
+		}
+		
+		// Push row onto vector
+		svals.push_back(mval);
+	}
+	
+	// Close file
+	f.close();
+
+	// Check that all rows have the same number of columns
+	unsigned int ncols = svals[0].size();
+	for(unsigned int i=1; i<svals.size(); i++){
+		if(svals[i].size() != ncols){
+			_DBG_<<"Number of columns not the same for all rows in "<<fname<<endl;
+			return true;
+		}
+	}
+	
+	return false;
+}
+
+//---------------------------------
+// GetCalib
+//---------------------------------
+bool JCalibrationFile::GetCalib(string namepath, vector< vector<string> > &svals, int event_number)
+{
+	/// Open file specified by namepath (and the url passed to us in the
+	/// constructor) and read in a table of calibration constants in plain
+	/// ascii. Values are copied into <i>svals</i>.
+	///
+	/// File format must be in a table form with the same number of items
+	/// on every line. Items should be separated by white space.
+	/// Lines starting with # are considered comments and are ignored
+	/// except for the last commented line before the first line containing
+	/// data. This is parsed (if present) to determine the column names
+	/// that will be used to index the map. If an appropriate column
+	/// names line is not found, numerical column names will be assigned
+	/// starting from zero.
+
+	// n.b. this was copied from the above and only the minimal changes made
+	// to ignore the key and store only the values in the order they are encountered
+	
+	// Clear svals map.
+	svals.clear();
+	
+	// Open file
+	string fname = basedir + namepath;
+	ifstream f(fname.c_str());
+	if(!f.is_open()){
+		string mess = "Unable to open \"" + fname + "\"!";
+		throw JException(mess);
+		return true; // never gets to this line
+	}
+	
+	// Loop over all lines in the file
+	string colnamesline;
+	vector<string> colnames;
+	string line;
+	while(getline(f, line, '\n')){
+		if(line.length()==0)continue;
+		if(line.substr(0,2) == "#%"){
+			// Parse special comment line with column names
+			string s(line);
+			s.erase(0,2); // remove leading "#%" 
+			stringstream sss(s);
+			colnames.clear();
+			string colname;
+			while(sss>>colname)colnames.push_back(colname);
+		}
+		if(line[0] == '#')continue;
+
+		// Break up the line into individual values and create a map indexed by column names
+		stringstream ss(line);
+		string val;
+		vector<string> mval;
+		unsigned int icol = 0;
+		while(ss>>val){
+			// Make sure a name exists for this column
+			if(colnames.size()<=icol){
+				stringstream sss;
+				sss << setw(4) << setfill('0') << icol;
+				colnames.push_back(sss.str());
+			}
+			mval.push_back(val);
 		}
 		
 		// Push row onto vector
